# chatbot_core

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  chat.py  config.py  connectors.py  db.py  domain.py  evaluation.py  llm.py  main.py  models.py  policy.py  privacy.py  rag.py  security.py  speech.py  tools.py  verifier.py
app/static/: demo.html  munibot.js
data/corpus/: 01_resumen_ejecutivo.md  02_casos_uso_requisitos.md  03_arquitectura_tecnica.md  04_modelos_open_source.md  05_hardware_infraestructura.md  08_costes.md  (+6 more)
deploy/: cluster-topology.md  cluster.example.env  com.munibot.ollama.plist.template  hospital-demo.env.example  nodes.example.json  nodes.hospital-demo.json
docs/: anti-hallucination-playbook.md  architecture.md  capacity-planning.md  deployment-lmstudio.md  evaluation.md  fine_tuning.md  frameworks-and-runtime.md  hallucination-control.md  hospital-reference-vertical.md  models.md  multimodal-annex.md  privacy-rgpd-ens.md  references.md  security-and-abuse.md  tool-calling.md
mcps/: README.md
profiles/: cityhall.json  company.json  hospital.json
scripts/: bootstrap.sh  bootstrap_ollama_node.sh  build_finetune_seed_dataset.py  check_ollama_nodes.py  deploy_cluster.py  distribute_project.sh  evaluate_golden_set.py  generate_ssh_key.sh  install_ollama_launch_agent.sh  run_gateway.sh  run_ollama_node.sh  sync_desktop_corpus.py  validate_finetune_dataset.py  validate_sector_packs.py
skills/: README.md
tests/: test_privacy.py  test_retriever.py  test_sector_packs.py  test_security.py  test_tools.py  test_verifier.py
(+80 files in other folders)
