[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-core"
version = "0.1.0"
description = "Grounded multi-domain chatbot prototype with RAG, safety controls, voice, and open-source LLM backends"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "edge-tts>=7.2.8",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "numpy>=2.4.0",
  "openai-whisper>=20250625",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools]
packages = ["app"]
